fix(Tabs): tabs don't break on new line in vertical orientation
issue -  #1435

--- a/src/components/Tabs/Tabs.css
+++ b/src/components/Tabs/Tabs.css
@@ -7,6 +7,7 @@
 
     &_direction_horizontal {
       align-items: center;
+      white-space: nowrap;
     }
 
     &_direction_vertical {
